--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Refinery Coffee Company</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="./public/css/style.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
